# chrome-tabpage-mgnt

./: .gitignore  FUNDING.yml  LICENSE  README.md  categorization-mapping-1759320898681.txt  categorization-mapping-1759438683424.txt  pyproject.toml
.github/: FUNDING.yml
src/ai_test/: aiManager_working.js  index.html  tabManager.js
src/chrome_tabpage_mgnt/: __init__.py  aiLogger.js  aiManager.js  background.js  categoryManager.js  content.js  main.js  main.py  manifest.json  modalManager.js  options.html  options.js  popup.html  popup.js  read_categories.py  styles.css  tabManager.js  tabManager.js@@ -165,6 +165,16 @@  uiManager.js
src/plugin_beta/: index.html  manifest.json
tests/: test_main.py
