[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chrome_tabpage_mgnt"
version = "0.1.0"
description = "A Python project created with uv"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = []
readme = "README.md"
requires-python = ">=3.13.1"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
chrome_tabpage_mgnt = "chrome_tabpage_mgnt.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

